# karamba

./: .gitignore  AUTO_SCROLL_FEATURE.md  BUGFIX_CHECKPOINTER.md  CHAT_HISTORY_UI.md  CONTEXT_AWARE_HITL.md  CONVERSATION_MEMORY.md  DOCUMENT_SESSION_LINKING.md  ENHANCED_FINANCIAL_AGENT.md  FRONTEND_IMPROVEMENTS.md  GETTING_STARTED.md  MULTI_AGENT_SYSTEM.md  README.md  SESSION_MEMORY_IMPLEMENTATION.md  docker-compose.yaml  quick_start.md  setup.sh  start-all.sh  start-backend.sh  start-frontend.sh  test_compatibility.py
backend/: .env.example  AGENT_TOOL_INTEGRATION.md  AUTOMATIC_TOOLS.md  BOTH_AGENTS_MIGRATED.md  Dockerfile  MIGRATION_COMPLETE.md  TABULAR_DATA_GUIDE.md  TOOLS_USAGE.md  fix_imports.sh  pyproject.toml  requirements.txt
backend/config/: phases.yaml
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/api/routes/: __init__.py  agent.py  conversations.py  documents.py  websocket.py
backend/src/data/: sessions.db  sessions.db-shm
backend/src/data/uploads/: business_case_hazyview_V2.xlsx
backend/src/karamba/: __init__.py
backend/src/karamba/agents/: __init__.py  base.py  financial.py  research.py  router.py  tool_aware.py
backend/src/karamba/core/: __init__.py  agent.py  meta_prompt.py  models.py  phase_engine.py
backend/src/karamba/document/: __init__.py  chunker.py  embeddings.py  processor.py  retriever.py
backend/src/karamba/llm/: __init__.py  anthropic_client.py  base.py  ollama_client.py
backend/src/karamba/memory/: __init__.py  models.py  orchestrator.py  store.py
backend/src/karamba/tools/: __init__.py  registry.py
backend/src/karamba/tools/data/: __init__.py  (+1 more)
backend/src/karamba/verification/: __init__.py
backend/tests/: conftest.py  test_agent.py  test_api_endpoints.py  test_core_models.py  test_document_chunker.py  test_llm.py  test_memory.py  test_phase_engine.py  test_vector_retrieval.py
(+33 files in other folders)
